# vanna-db-explorer

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
db_explorer/: main.py  main2.py  my_logger.py  ollama_vanna.py  train.py  utils.py
training/ddl/: city.sql  country.sql  countrylanguage.sql
training/docs/: country_and_language.sql  relationships.md
