[tool.poetry]
name = "db_explorer"
version = "0.1.0"
description = ""
authors = ["Justin Mills <vortexjj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vanna = { extras = ["chromadb", "postgres"], version = "^0.0.37" }
# Need to pin this because a bug in poetry:
# https://github.com/plotly/Kaleido/issues/125
kaleido = "0.2.1"
ollama = "^0.1.4"
loguru = "^0.7.2"
poethepoet = "^0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
clean-chroma = "rm -rf .chroma"
run-main = "python db_explorer/main.py"
clean-run = ["clean-chroma", "run-main"]
